--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -86,12 +86,12 @@
             </li>
         </ul>
     </div>
-    <div class="services center">
-        <div class="services-head">
+    <div class="services">
+        <div class="services-head center">
             <h1 class="services-head-title">Why You Should Choose Us.</h1>
             <p class="services-head-txt">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary catalysts.</p>
         </div>
-        <div class="services-content">
+        <div class="services-content center">
             <ul class="services-list">
                 <li>
                     <div class="services-content-item">
